Started adding mobile viewport support

--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
             <h3>Oregon State University</h3>
             <span class="item-date">Expected June 2027</span>
           </div>
-          <p>
-            Bachelor's in Computer Science, focus in AI | GPA: 3.98
-          </p>
+          <p>Bachelor's in Computer Science, focus in AI | GPA: 3.98</p>
           <p>
             Notable Classes: Operating Systems, Algorithms, Software
             Engineering, Intro to Databases, Data Structures
@@ -167,9 +165,15 @@
             <span class="item-date">June 2021 - August 2021</span>
           </div>
           <p>
-            Redesigned <span style="color: #f4f1de; font-weight: bold">30+ animations</span> for technical training materials.
-            Worked with professionals to make animations more accurately display information.
-            Presented work for a symposium in order to <span style="color: #f4f1de; font-weight: bold">teach</span> other interns my development process.
+            Redesigned
+            <span style="color: #f4f1de; font-weight: bold"
+              >30+ animations</span
+            >
+            for technical training materials. Worked with professionals to make
+            animations more accurately display information. Presented work for a
+            symposium in order to
+            <span style="color: #f4f1de; font-weight: bold">teach</span> other
+            interns my development process.
           </p>
         </div>
       </section>
@@ -206,7 +210,9 @@
               gun control across Twitter posts using
               <span style="color: #f4f1de; font-weight: bold">BERTweet</span>
               . Implementing
-              <span style="color: #f4f1de; font-weight: bold">topic modeling</span>
+              <span style="color: #f4f1de; font-weight: bold"
+                >topic modeling</span
+              >
               with
               <span style="color: #f4f1de; font-weight: bold">BERTweet</span> to
               group tweets and identify the stances of opposing sides. Aiming to
@@ -245,8 +251,8 @@
               <span style="color: #f4f1de; font-weight: bold">BERTopic</span> to
               visualize sentiment trends across major themes. Developing
               interactive visualizations compare sentiment distribution and
-              intertopic distances. Building a web interface that allows users to
-              explore and filter through sentiment data by theme and topic.
+              intertopic distances. Building a web interface that allows users
+              to explore and filter through sentiment data by theme and topic.
             </p>
           </div>
         </div>
@@ -281,8 +287,8 @@
               using an
               <span style="color: #f4f1de; font-weight: bold">Agile/Scrum</span>
               framework. Developed and integrated three microservices to support
-              user authentication and storage for recipes and ingredients. Allows
-              users to manage recipes, while incorporating inclusivity
+              user authentication and storage for recipes and ingredients.
+              Allows users to manage recipes, while incorporating inclusivity
               heuristics for accessibility and usability.
             </p>
           </div>
@@ -316,7 +322,9 @@
               Built a website using
               <span style="color: #f4f1de; font-weight: bold">Node.js</span>
               that manages the sales of a fictional physical game store using a
-              <span style="color: #f4f1de; font-weight: bold">SQL database</span>
+              <span style="color: #f4f1de; font-weight: bold"
+                >SQL database</span
+              >
               . Implemented
               <span style="color: #f4f1de; font-weight: bold">CRUD</span>
               operations for each of the six entities which includes a
@@ -373,8 +381,8 @@
             <span class="item-date">September 2023 - Present</span>
           </div>
           <p>
-            Achieved Honor Roll status every term for maintaining a GPA of 3.5 or higher
-            throughout my time at OSU.
+            Achieved Honor Roll status every term for maintaining a GPA of 3.5
+            or higher throughout my time at OSU.
           </p>
 
           <div class="item-header">
@@ -392,7 +400,8 @@
             <span class="item-date">December 2023</span>
           </div>
           <p>
-            I received this award in a reverse engineering class, which reflects my passion for visual communication and organization.
+            I received this award in a reverse engineering class, which reflects
+            my passion for visual communication and organization.
           </p>
         </div>
       </section>
@@ -418,6 +427,21 @@
           </div>
         </div>
       </section>
+
+      <div class="contact-bar-mobile">
+        <a href="mailto:hartere@oregonstate.edu">
+          <img src="Images/email-icon.png" alt="Email" />
+        </a>
+        <a href="https://linkedin.com/in/ethan-harter236" target="_blank">
+          <img src="Images/linkedin-icon.png" alt="LinkedIn" />
+        </a>
+        <a href="https://github.com/EthanHarter934" target="_blank">
+          <img src="Images/github-icon.png" alt="GitHub" />
+        </a>
+        <a href="CS_AI Resume.pdf" target="_blank">
+          <img src="Images/resume-icon.png" alt="Resume" />
+        </a>
+      </div>
     </div>
   </body>
 </html>
